--- a/404.html
+++ b/404.html
@@ -1,41 +1,62 @@
-<!doctype html><html lang=en-us><head>
-<meta charset=utf-8>
-<meta name=mobile-web-app-capable content="yes">
-<meta name=viewport content="width=device-width,initial-scale=1">
-<title>might be a cow</title>
-<link rel=icon href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 110 110%22><text y=%22.9em%22 font-size=%2290%22>⭐</text></svg>">
-<link rel=authorization_endpoint href=https://indieauth.com/auth>
-<link rel=token_endpoint href=https://tokens.indieauth.com/token>
-<link rel=stylesheet href=https://thoughts.moooo.ooo/css/layout.css crossorigin=anonymous media=screen>
-<link rel=stylesheet href=https://thoughts.moooo.ooo/skins/minimal.css crossorigin=anonymous media=screen>
-<meta property="og:url" content="https://thoughts.moooo.ooo/">
-<meta property="og:title" content="might be a cow">
-<meta property="og:site_name" content="might be a cow">
+<!doctype html><html lang=en dir=auto>
+<head><meta charset=utf-8>
+<meta http-equiv=x-ua-compatible content="IE=edge">
+<meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
+<meta name=robots content="index, follow">
+<title>404 Page not found | might be a cow</title>
+<meta name=keywords content>
+<meta name=description content>
+<meta name=author content>
+<link rel=canonical href=https://thoughts.moooo.ooo/404.html>
+<link crossorigin=anonymous href=/assets/css/stylesheet.8b523f1730c922e314350296d83fd666efa16519ca136320a93df674d00b6325.css integrity="sha256-i1I/FzDJIuMUNQKW2D/WZu+hZRnKE2MgqT32dNALYyU=" rel="preload stylesheet" as=style>
+<link rel=icon href=https://thoughts.moooo.ooo/favicon.ico>
+<link rel=icon type=image/png sizes=16x16 href=https://thoughts.moooo.ooo/favicon-16x16.png>
+<link rel=icon type=image/png sizes=32x32 href=https://thoughts.moooo.ooo/favicon-32x32.png>
+<link rel=apple-touch-icon href=https://thoughts.moooo.ooo/apple-touch-icon.png>
+<link rel=mask-icon href=https://thoughts.moooo.ooo/safari-pinned-tab.svg>
+<meta name=theme-color content="#2e2e33">
+<meta name=msapplication-TileColor content="#2e2e33">
+<noscript>
+<style>#theme-toggle,.top-link{display:none}</style>
+<style>@media(prefers-color-scheme:dark){:root{--theme:rgb(29, 30, 32);--entry:rgb(46, 46, 51);--primary:rgb(218, 218, 219);--secondary:rgb(155, 156, 157);--tertiary:rgb(65, 66, 68);--content:rgb(196, 196, 197);--hljs-bg:rgb(46, 46, 51);--code-bg:rgb(55, 56, 62);--border:rgb(51, 51, 51)}.list{background:var(--theme)}.list:not(.dark)::-webkit-scrollbar-track{background:0 0}.list:not(.dark)::-webkit-scrollbar-thumb{border-color:var(--theme)}}</style>
+</noscript><meta property="og:title" content="404 Page not found">
+<meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta name=twitter:title content="might be a cow">
-</head><body>
-<header>
-<section>
-<div class="header flex row">
-<div class="header__item flex row">
-<div id=logo>
+<meta property="og:url" content="https://thoughts.moooo.ooo/404.html">
+<meta name=twitter:card content="summary">
+<meta name=twitter:title content="404 Page not found">
+<meta name=twitter:description content>
+</head>
+<body class=list id=top>
+<script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add('dark'):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove('dark'):window.matchMedia('(prefers-color-scheme: dark)').matches&&document.body.classList.add('dark')</script>
+<header class=header>
+<nav class=nav>
+<div class=logo>
+<a href=https://thoughts.moooo.ooo/ accesskey=h title="might be a cow (Alt + H)">might be a cow</a>
+<div class=logo-switches>
+<button id=theme-toggle accesskey=t title="(Alt + T)"><svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/></svg><svg id="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></svg>
+</button>
 </div>
-<a id=site__name href=https://thoughts.moooo.ooo/>
-might be a cow
-</a>
 </div>
-<div class="flex row">
-<nav aria-label="page menu" class="flex row">
-<ul role=menubar class="flex row">
-<li role=none>
-<a class=menu__item href=https://thoughts.moooo.ooo/><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none" stroke="currentcolor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M21 11.5a8.38 8.38.0 01-.9 3.8A8.5 8.5.0 0112.5 20a8.38 8.38.0 01-3.8-.9L3 21l1.9-5.7A8.38 8.38.0 014 11.5a8.5 8.5.0 014.7-7.6 8.38 8.38.0 013.8-.9h.5a8.48 8.48.0 018 8v.5z"/></svg>
-</a>
-</li>
+<ul id=menu>
 </ul>
 </nav>
-</div>
-</div>
-</section>
-</header><style>:root{--color-bg:black}.glitch{color:#fff;width:100%;font-size:150px;text-transform:uppercase;position:relative;display:inline-block}.glitch::before,.glitch::after{content:attr(data-text);position:absolute;top:0;left:0;width:100%;height:100%;background:var(--color-bg)}.glitch::before{left:2px;text-shadow:-2px 0 #49fc00;clip:rect(24px,550px,90px,0);animation:glitch-anim-2 3s infinite linear alternate-reverse}.glitch::after{left:-2px;text-shadow:-2px 0 #b300fc;clip:rect(85px,550px,140px,0);animation:glitch-anim 2.5s infinite linear alternate-reverse}@-webkit-keyframes glitch-anim{0%{clip:rect(39px,9999px,53px,0)}4.166666666666666%{clip:rect(14px,9999px,68px,0)}8.333333333333332%{clip:rect(113px,9999px,107px,0)}12.5%{clip:rect(144px,9999px,134px,0)}16.666666666666664%{clip:rect(70px,9999px,87px,0)}20.833333333333336%{clip:rect(73px,9999px,100px,0)}25%{clip:rect(66px,9999px,113px,0)}29.166666666666668%{clip:rect(84px,9999px,69px,0)}33.33333333333333%{clip:rect(119px,9999px,36px,0)}37.5%{clip:rect(100px,9999px,21px,0)}41.66666666666667%{clip:rect(86px,9999px,141px,0)}45.83333333333333%{clip:rect(101px,9999px,106px,0)}50%{clip:rect(19px,9999px,10px,0)}54.166666666666664%{clip:rect(117px,9999px,16px,0)}58.333333333333336%{clip:rect(137px,9999px,143px,0)}62.5%{clip:rect(73px,9999px,144px,0)}66.66666666666666%{clip:rect(118px,9999px,96px,0)}70.83333333333334%{clip:rect(9px,9999px,113px,0)}75%{clip:rect(72px,9999px,85px,0)}79.16666666666666%{clip:rect(75px,9999px,149px,0)}83.33333333333334%{clip:rect(106px,9999px,67px,0)}87.5%{clip:rect(35px,9999px,99px,0)}91.66666666666666%{clip:rect(25px,9999px,128px,0)}95.83333333333334%{clip:rect(36px,9999px,60px,0)}100%{clip:rect(82px,9999px,112px,0)}}@keyframes glitch-anim{0%{clip:rect(39px,9999px,53px,0)}4.166666666666666%{clip:rect(14px,9999px,68px,0)}8.333333333333332%{clip:rect(113px,9999px,107px,0)}12.5%{clip:rect(144px,9999px,134px,0)}16.666666666666664%{clip:rect(70px,9999px,87px,0)}20.833333333333336%{clip:rect(73px,9999px,100px,0)}25%{clip:rect(66px,9999px,113px,0)}29.166666666666668%{clip:rect(84px,9999px,69px,0)}33.33333333333333%{clip:rect(119px,9999px,36px,0)}37.5%{clip:rect(100px,9999px,21px,0)}41.66666666666667%{clip:rect(86px,9999px,141px,0)}45.83333333333333%{clip:rect(101px,9999px,106px,0)}50%{clip:rect(19px,9999px,10px,0)}54.166666666666664%{clip:rect(117px,9999px,16px,0)}58.333333333333336%{clip:rect(137px,9999px,143px,0)}62.5%{clip:rect(73px,9999px,144px,0)}66.66666666666666%{clip:rect(118px,9999px,96px,0)}70.83333333333334%{clip:rect(9px,9999px,113px,0)}75%{clip:rect(72px,9999px,85px,0)}79.16666666666666%{clip:rect(75px,9999px,149px,0)}83.33333333333334%{clip:rect(106px,9999px,67px,0)}87.5%{clip:rect(35px,9999px,99px,0)}91.66666666666666%{clip:rect(25px,9999px,128px,0)}95.83333333333334%{clip:rect(36px,9999px,60px,0)}100%{clip:rect(82px,9999px,112px,0)}}@-webkit-keyframes glitch-anim-2{6.666666666666667%{clip:rect(83px,9999px,90px,0)}10%{clip:rect(112px,9999px,91px,0)}13.333333333333334%{clip:rect(34px,9999px,40px,0)}16.666666666666664%{clip:rect(89px,9999px,142px,0)}20%{clip:rect(1px,9999px,47px,0)}23.333333333333332%{clip:rect(14px,9999px,82px,0)}26.666666666666668%{clip:rect(101px,9999px,80px,0)}30%{clip:rect(88px,9999px,136px,0)}33.33333333333333%{clip:rect(69px,9999px,142px,0)}36.666666666666664%{clip:rect(128px,9999px,81px,0)}40%{clip:rect(102px,9999px,7px,0)}43.333333333333336%{clip:rect(97px,9999px,111px,0)}46.666666666666664%{clip:rect(35px,9999px,13px,0)}50%{clip:rect(123px,9999px,38px,0)}53.333333333333336%{clip:rect(1px,9999px,72px,0)}56.666666666666664%{clip:rect(80px,9999px,93px,0)}60%{clip:rect(58px,9999px,93px,0)}63.33333333333333%{clip:rect(30px,9999px,107px,0)}66.66666666666666%{clip:rect(37px,9999px,30px,0)}70%{clip:rect(130px,9999px,69px,0)}73.33333333333333%{clip:rect(129px,9999px,60px,0)}76.66666666666667%{clip:rect(85px,9999px,18px,0)}80%{clip:rect(28px,9999px,38px,0)}83.33333333333334%{clip:rect(131px,9999px,50px,0)}86.66666666666667%{clip:rect(42px,9999px,133px,0)}90%{clip:rect(103px,9999px,101px,0)}93.33333333333333%{clip:rect(38px,9999px,52px,0)}96.66666666666667%{clip:rect(6px,9999px,80px,0)}100%{clip:rect(99px,9999px,117px,0)}}@keyframes glitch-anim-2{6.666666666666667%{clip:rect(83px,9999px,90px,0)}10%{clip:rect(112px,9999px,91px,0)}13.333333333333334%{clip:rect(34px,9999px,40px,0)}16.666666666666664%{clip:rect(89px,9999px,142px,0)}20%{clip:rect(1px,9999px,47px,0)}23.333333333333332%{clip:rect(14px,9999px,82px,0)}26.666666666666668%{clip:rect(101px,9999px,80px,0)}30%{clip:rect(88px,9999px,136px,0)}33.33333333333333%{clip:rect(69px,9999px,142px,0)}36.666666666666664%{clip:rect(128px,9999px,81px,0)}40%{clip:rect(102px,9999px,7px,0)}43.333333333333336%{clip:rect(97px,9999px,111px,0)}46.666666666666664%{clip:rect(35px,9999px,13px,0)}50%{clip:rect(123px,9999px,38px,0)}53.333333333333336%{clip:rect(1px,9999px,72px,0)}56.666666666666664%{clip:rect(80px,9999px,93px,0)}60%{clip:rect(58px,9999px,93px,0)}63.33333333333333%{clip:rect(30px,9999px,107px,0)}66.66666666666666%{clip:rect(37px,9999px,30px,0)}70%{clip:rect(130px,9999px,69px,0)}73.33333333333333%{clip:rect(129px,9999px,60px,0)}76.66666666666667%{clip:rect(85px,9999px,18px,0)}80%{clip:rect(28px,9999px,38px,0)}83.33333333333334%{clip:rect(131px,9999px,50px,0)}86.66666666666667%{clip:rect(42px,9999px,133px,0)}90%{clip:rect(103px,9999px,101px,0)}93.33333333333333%{clip:rect(38px,9999px,52px,0)}96.66666666666667%{clip:rect(6px,9999px,80px,0)}100%{clip:rect(99px,9999px,117px,0)}}</style><main aria-role=main><section class=flex><div class=glitch data-text=404><p>404</p></div></section></main>
+</header>
+<main class=main>
+<div class=not-found>404</div>
+</main>
+<footer class=footer>
+<span>&copy; 2022 <a href=https://thoughts.moooo.ooo/>might be a cow</a></span>
+<span>
+Powered by
+<a href=https://gohugo.io/ rel="noopener noreferrer" target=_blank>Hugo</a> &
+        <a href=https://github.com/adityatelange/hugo-PaperMod/ rel=noopener target=_blank>PaperMod</a>
+</span>
+</footer>
+<a href=#top aria-label="go to top" title="Go to Top (Alt + G)" class=top-link id=top-link accesskey=g><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentcolor"><path d="M12 6H0l6-6z"/></svg>
+</a>
+<script>let menu=document.getElementById('menu');menu&&(menu.scrollLeft=localStorage.getItem("menu-scroll-position"),menu.onscroll=function(){localStorage.setItem("menu-scroll-position",menu.scrollLeft)}),document.querySelectorAll('a[href^="#"]').forEach(a=>{a.addEventListener("click",function(b){b.preventDefault();var a=this.getAttribute("href").substr(1);window.matchMedia('(prefers-reduced-motion: reduce)').matches?document.querySelector(`[id='${decodeURIComponent(a)}']`).scrollIntoView():document.querySelector(`[id='${decodeURIComponent(a)}']`).scrollIntoView({behavior:"smooth"}),a==="top"?history.replaceState(null,null," "):history.pushState(null,null,`#${a}`)})})</script>
+<script>var mybutton=document.getElementById("top-link");window.onscroll=function(){document.body.scrollTop>800||document.documentElement.scrollTop>800?(mybutton.style.visibility="visible",mybutton.style.opacity="1"):(mybutton.style.visibility="hidden",mybutton.style.opacity="0")}</script>
+<script>document.getElementById("theme-toggle").addEventListener("click",()=>{document.body.className.includes("dark")?(document.body.classList.remove('dark'),localStorage.setItem("pref-theme",'light')):(document.body.classList.add('dark'),localStorage.setItem("pref-theme",'dark'))})</script>
 </body>
 </html>
