--- a/404.html
+++ b/404.html
@@ -26,6 +26,12 @@
 <h2 class=read-more>Read more</h2>
 <section class=item>
 <div>
+<h1 class=title><a href=/posts/1658045972/>1658045972</a></h1>
+<div class=date>Jul 17, 2022</div>
+</div>
+</section>
+<section class=item>
+<div>
 <h1 class=title><a href=/posts/second/>Second</a></h1>
 <div class=date>Jul 17, 2022</div>
 </div>
